--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<div class="team-member">
 								<figure class="member-photo"><img src="img/team/member3.jpg" alt="" /></figure>
 								<div class="team-detail">
-								<h4>Bishapyan</h4>
+								<h4>Baisampayan Das</h4>
 									<span>Sales &amp Marketing </span>
 								</div>
 							</div>
@@ -188,7 +188,7 @@
 		<section id="parallax1" class="section pad-top40 pad-bot40" data-stellar-background-ratio="0.5">
 			<div class="container">
             <div class="align-center pad-top40 pad-bot40">
-                <blockquote class="bigquote color-white">Indoctum accusamus comprehensam</blockquote>
+              <a href="upcoming.html">  <blockquote class="bigquote color-white">Comming Soon</blockquote></a>
             </div>
 			</div>	
 		</section>
@@ -338,7 +338,7 @@
 		</section>
 		<section id="parallax2" class="section parallax" data-stellar-background-ratio="0.5">	
             <div class="align-center pad-top40 pad-bot40">
-                <blockquote class="bigquote color-white">Indoctum accusamus comprehensam</blockquote>
+              <a href="upcoming.html">  <blockquote class="bigquote color-white">Comming Soon</blockquote></a>
             </div>
 		</section>
 
