--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><a href="#section-about">About</a></li>
 						<li><a href="#section-works">Business Plan</a></li>
 						<li><a href="#section-contact">Contact Us</a></li>						
-						<li><a href="admin/index.html">Login</a></li>
+						<li><a href="http://rohanroy.com/admin/index.html">Login</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
@@ -173,8 +173,8 @@
 							<div class="team-member">
 								<figure class="member-photo"><img src="img/team/member4.jpg" alt="" /></figure>
 								<div class="team-detail">
-								<h4>Kevin Peterson</h4>
-									<span>UI designer</span>
+								<h4>Pranab Paul</h4>
+									<span>Marketing</span>
 								</div>
 							</div>
 						</div>
