--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 												Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Sed sagittis tortor vel arcu sollicitudin nec tincidunt metus suscipit.Nunc velit risus, dapibus non interdum.
 											</h5>
 											<br/>
-											<span class="author">&mdash; Rohan Roy <a href="#">www.rohanroy.com</a></span>
+											<span class="author">&mdash; Steve Jobs <a href="#">www.example.com</a></span>
 										</div>
 
 								</div>
