--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><a href="#section-about">About</a></li>
 						<li><a href="#section-works">Business Plan</a></li>
 						<li><a href="#section-contact">Contact Us</a></li>						
-						<li><a href="http://rohanroy.com/admin/index.html">Login</a></li>
+						<li><a href="http://rohanroy.com/admin/login.html">Login</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
