--- a/index.html
+++ b/index.html
@@ -46,19 +46,9 @@
 		<section class="featured">
 			<div class="container"> 
 				<div class="row mar-bot40">
-					<div class="col-md-6 col-md-offset-3">
-						
-						<div class="align-center">
-							<i class="fa fa-flask fa-5x mar-bot20"></i>
-							<h2 class="slogan">Welcome to Company Name</h2>
-							<p>
-							Lorem ipsum dolor sit amet, natum bonorum expetendis usu ut. 
-							Eum impetus offendit disputationi eu, at vim aliquip lucilius praesent. 
-							Alia laudem antiopam te ius, sed ad munere integre, ubique facete sapientem nam ut. 
-				
-							</p>	
-						</div>
-					</div>
+					<!-- Start WOWSlider.com -->
+					<iframe src="slide.html" style="width:960px;height:480px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+					<!-- End WOWSlider.com -->
 				</div>
 			</div>
 		</section>
