--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><a href="#section-about">About</a></li>
 						<li><a href="#section-works">Business Plan</a></li>
 						<li><a href="#section-contact">Contact Us</a></li>						
-						<li><a href="http://rohanroy.com/admin/login.html">Login</a></li>
+						<li><a href="http://rohanroy.com/admin/login.html" data-toggle="modal" data-target="#login">Login</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
@@ -393,7 +393,42 @@
 					<div class="col-sm-12"><p>Copyright &copy; 2014 Designed - by <a href="http://rohanroy.com">Rohan Roy</a></p></div>
 			</div>
 		</div>
-
+	<!--Modal Login-->
+	<div class="modal fade" id="login" tabondex="-1" role="dislog" aria-labelledby="loginModal" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+			        	<span aria-hidden="true">x</span>
+      					<span class="sr-only">Close</span>
+			        </button>
+			          <h3 class="modal-title">Please Sign In</h3>
+			    </div>
+			    <div class="modal-body">
+			        <form role="form">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="E-mail/Username" name="email" type="email" autofocus>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                </label>
+                            </div>
+                                <!-- Change this to a button or input when using this as a form -->
+                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="index.html" class="btn btn-lg btn-warning btn-block">Forget Password</a>
+                            	<a href="index.html" class="btn btn-lg btn-primary btn-block">Register</a>
+                        </fieldset>
+                    </form>
+        		</div>
+			</div>
+		</div>
+	</div> 
+	<!-- End of Modal -->
 	</section>
 	<a href="#header" class="scrollup"><i class="fa fa-chevron-up"></i></a>	
 
@@ -401,7 +436,6 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
 	<script src="js/jquery.isotope.min.js"></script>
 	<script src="js/jquery.nicescroll.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
@@ -412,32 +446,5 @@
 	<script src="js/jquery.appear.js"></script>
 	<script src="js/validate.js"></script>
     <script src="js/main.js"></script>
-        <script type="text/javascript">
-            // When the window has finished loading create our google map below
-            google.maps.event.addDomListener(window, 'load', init);
-        
-            function init() {
-                // Basic options for a simple Google Map
-                // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
-                var mapOptions = {
-                    // How zoomed in you want the map to start at (always required)
-                    zoom: 11,
-
-                    // The latitude and longitude to center the map (always required)
-                    center: new google.maps.LatLng(40.6700, -73.9400), // New York
-
-                    // How you would like to style the map. 
-                    // This is where you would paste any style found on Snazzy Maps.
-                    styles: [	{		featureType:"all",		elementType:"all",		stylers:[		{			invert_lightness:true		},		{			saturation:10		},		{			lightness:30		},		{			gamma:0.5		},		{			hue:"#1C705B"		}		]	}	]
-                };
-
-                // Get the HTML DOM element that will contain your map 
-                // We are using a div with id="map" seen below in the <body>
-                var mapElement = document.getElementById('map');
-
-                // Create the Google Map using out element and options defined above
-                var map = new google.maps.Map(mapElement, mapOptions);
-            }
-        </script>
 	</body>
 </html>
