--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<div class="row">				
 					<div class="col-lg-12">
 							<div class="align-center">
-										<div class="testimonial pad-top40 pad-bot40 clearfix">
+										<div class="pad-bot40 clearfix">
 											
 										</div>
 
@@ -172,7 +172,7 @@
 		<!-- spacer section:stats -->
 		<section id="parallax1" class="section pad-top40 pad-bot40" data-stellar-background-ratio="0.5">
 			<div class="container">
-            <div class="align-center pad-top40 pad-bot40">
+            <div class="pad-bot40 clearfix">
              
             </div>
 			</div>	
@@ -321,7 +321,7 @@
 			</div>
 		</section>
 		<section id="parallax2" class="section parallax" data-stellar-background-ratio="0.5">	
-            <div class="align-center pad-top40 pad-bot40">
+            <div class="pad-bot40">
             </div>
 		</section>
 
