--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><a href="#section-about">About</a></li>
 						<li><a href="#section-works">Business Plan</a></li>
 						<li><a href="#section-contact">Contact Us</a></li>						
-						<li><a href="http://rohanroy.com/admin/login.html" data-toggle="modal" data-target="#login">Login</a></li>
+						<li><a href="#" data-toggle="modal" data-target="#login">Login</a></li>
 					</ul>
 				</div><!--/.navbar-collapse -->
 			</div>
@@ -392,6 +392,7 @@
 					<div class="col-sm-12"><p>Copyright &copy; 2014 Designed - by <a href="http://rohanroy.com">Rohan Roy</a></p></div>
 			</div>
 		</div>
+	</section>
 	<!--Modal Login-->
 	<div class="modal fade" id="login" tabondex="-1" role="dislog" aria-labelledby="loginModal" aria-hidden="true">
 		<div class="modal-dialog">
@@ -418,7 +419,7 @@
                                 </label>
                             </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="admin/index.html" class="btn btn-lg btn-success btn-block">Login</a>
                                 <a href="index.html" class="btn btn-lg btn-warning btn-block">Forget Password</a>
                             	<a href="index.html" class="btn btn-lg btn-primary btn-block">Register</a>
                         </fieldset>
@@ -428,7 +429,6 @@
 		</div>
 	</div> 
 	<!-- End of Modal -->
-	</section>
 	<a href="#header" class="scrollup"><i class="fa fa-chevron-up"></i></a>	
 
 	<script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
