--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             </div>
                                 <!-- Change this to a button or input when using this as a form -->
                                 <a href="admin/index.html" class="btn btn-lg btn-success btn-block">Login</a>
-                                <a href="index.html" class="btn btn-lg btn-warning btn-block">Forget Password</a>
+                                <a href="index.html" class="btn btn-lg btn-warning btn-block">Forgot Password</a>
                             	<a href="index.html" class="btn btn-lg btn-primary btn-block">Register</a>
                         </fieldset>
                     </form>
