--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
     <head>
 		<!-- BASICS -->
         <meta charset="utf-8">
@@ -33,7 +34,7 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav" data-0="margin-top:20px;" data-300="margin-top:5px;">
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="#featured">Home</a></li>
 						<li><a href="#section-products">Products</a></li>
 						<li><a href="#section-about">About</a></li>
 						<li><a href="#section-works">Business Plan</a></li>
@@ -43,7 +44,8 @@
 				</div><!--/.navbar-collapse -->
 			</div>
 		</div>
-		<section class="featured">
+		
+		<section class="featured" id="featured">
 			<div class="container"> 
 				<div class="row mar-bot40">
 					<!-- Start WOWSlider.com -->
@@ -389,7 +391,7 @@
 			</div>
 
 			<div class="row align-center copyright">
-					<div class="col-sm-12"><p>Copyright &copy; 2014 Designed - by <a href="http://rohanroy.com">Rohan Roy</a></p></div>
+					<div class="col-sm-12"><p>Copyright &copy; 2014  <a href="http://example.com">Company Name</a></p></div>
 			</div>
 		</div>
 	</section>
