--- a/admin/index.html
+++ b/admin/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://goo.gl/RrsLIW"><i class="fa fa-home"></i>Company Name</a>
+                <a class="navbar-brand" href="../index.html"><i class="fa fa-home"></i>Company Name</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -467,7 +467,7 @@
     <section id="footer" class="section footer">
 		<div class="container">
 			<div class="row text-center copyright">
-					<div class="col-sm-12"><p>Copyright &copy; 2014 Designed - by <a href="http://rohanroy.com">Rohan Roy</a></p></div>
+					<div class="col-sm-12"><p>Copyright &copy; 2014  <a href="http://example.com">Company Name</a></p></div>
 			</div>
 		</div>
 
